# SparkETLPipeline

./: .gitignore  README.md  pyproject.toml
Daemons/: README.md  airflow-scheduler.service  airflow-scheduler.sh  airflow-webserver.service  airflow-webserver.sh  spark-run.sh  spark-stop.sh
Notebooks/: DataBaseConnection.ipynb  ETLPipeLine01.ipynb  MoMQuery.ipynb  PandasDataFrame.ipynb  db.py  ewmaQuery.ipynb  filters.py  medallionLayers.md  silver_layer-test2.ipynb  spark-config.conf.template
PySparkScripts/: README.md  pyspark_etl.py
SchedulerScripts/dags/: daily_spark_run.py  pyspark_submit.sh
conf/: README.md
