[tool.poetry]
name = "ETLpipeline"
version = "1.0"
description = "ETL pipeline using Spark"
authors = ["SThZ"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9.15,<3.13"
pyspark = "^3.5.0"
black = "^23.10.1"
jupyterlab = "^4.0.7"
pandas = "^2.1.2"
psycopg2-binary = "^2.9.9"
pymysql = "^1.1.0"
python-dotenv = "^1.0.0"
SQLAlchemy = "^2.0.23"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
